# ReadTarjan

./: .gitignore  CMakeLists.txt  cxx.sh  run_stat.py
data/: formatted_soc-sign-bitcoinalpha.txt
include/: CycleEnumeration.h  DataStructs.h  Macros.h  utils.h
src/: CycleEnumeration.cpp  CycleMain.cpp  CycleReadTarjan.cpp
